--- a/node/app/package.json
+++ b/node/app/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "pokmeon_mmo",
+  "name": "pokeMMOn",
   "version": "0.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon ../server.js"
   },
   "author": "",
   "license": "BSD-2-Clause",
