--- a/node/package.json
+++ b/node/package.json
@@ -1,12 +1,21 @@
 {
-  "name": "pokeMMOn-console",
+  "name": "pokeMMOn",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-    "start": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "colors": "^1.0.3",
+    "connect-redis": "^2.1.0",
+    "cookie": "^0.1.2",
+    "express-session": "^1.9.3",
+    "keypress": "^0.2.1",
+    "mysql": "^2.5.4",
+    "socket.io": "^1.2.1"
+  }
 }
