--- a/node/package.json
+++ b/node/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cli-table": "^0.3.1",
     "colors": "^1.0.3",
     "connect-redis": "^2.1.0",
     "cookie": "^0.1.2",
