--- a/server/app/maps/start/mapping.json
+++ b/server/app/maps/start/mapping.json
@@ -1,8 +1,1 @@
-{
-    "up": {
-        "zone": "zone_name",
-        "mapping": [
-            [[3, 4], [5, 6]]
-        ]
-    }
-}
+{"up":{"zone":"zone_name","mapping":[[3,4],[5,6]]}}
