--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "connect-redis": "^2.1.0",
     "cookie": "^0.1.2",
     "express-session": "^1.9.3",
+    "file-tail": "^0.3.0",
     "keypress": "^0.2.1",
     "mysql": "^2.5.4",
     "socket.io": "^1.2.1"
