--- a/server/package.json
+++ b/server/package.json
@@ -10,14 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cli-table": "^0.3.1",
     "colors": "^1.0.3",
-    "connect-redis": "^2.1.0",
+    "connect-redis": "^2.2.0",
     "cookie": "^0.1.2",
-    "express-session": "^1.9.3",
+    "express-session": "^1.10.3",
     "file-tail": "^0.3.0",
     "keypress": "^0.2.1",
-    "mysql": "^2.5.4",
-    "socket.io": "^1.2.1"
+    "mysql": "^2.5.5",
+    "socket.io": "^1.3.5",
+    "cli-table2": "~0.1.5"
   }
 }
