--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "keypress": "^0.2.1",
     "mysql": "^2.5.5",
     "socket.io": "^1.3.5",
-    "cli-table2": "~0.1.5"
+    "cli-table2": "~0.1.5",
+    "merge": "~1.2.0"
   }
 }
